@@ -7,12 +7,13 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import io.opaa.api.dto.QueryResponse;
+import io.opaa.indexing.DocumentRepository;
 import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.ai.chat.messages.AssistantMessage;
@@ -29,94 +30,93 @@ class QueryServiceTest {
 
   @Mock private VectorStore vectorStore;
   @Mock private AnswerGenerationService answerGenerationService;
-  @InjectMocks private QueryService queryService;
+  @Mock private DocumentRepository documentRepository;
+  private QueryService queryService;
+
+  @BeforeEach
+  void setUp() {
+    queryService =
+        new QueryService(
+            vectorStore, answerGenerationService, new CitationParser(), documentRepository);
+  }
 
   @Test
-  void queryPerformsSimilaritySearchAndReturnsResponse() {
+  void queryMarksCitedSourcesCorrectly() {
     var chunk =
         Document.builder()
             .text("Relevant content")
-            .metadata(Map.of("file_name", "readme.md", "document_id", "123"))
+            .metadata(Map.of("file_name", "readme.md", "document_id", "doc-123"))
             .score(0.85)
             .build();
 
     when(vectorStore.similaritySearch(any(SearchRequest.class))).thenReturn(List.of(chunk));
 
-    var usage =
-        new Usage() {
-          @Override
-          public Integer getPromptTokens() {
-            return 100;
-          }
-
-          @Override
-          public Integer getCompletionTokens() {
-            return 200;
-          }
-
-          @Override
-          public Object getNativeUsage() {
-            return null;
-          }
-        };
+    var usage = createUsage(100, 200);
     var metadata = ChatResponseMetadata.builder().model("gpt-4o").usage(usage).build();
-    var assistantMessage = new AssistantMessage("The answer is 42");
-    var generation = new Generation(assistantMessage);
-    var chatResponse = new ChatResponse(List.of(generation), metadata);
+    var answer = "The answer is 42 【source: doc-123#0 | readme.md】";
+    var chatResponse =
+        new ChatResponse(List.of(new Generation(new AssistantMessage(answer))), metadata);
     when(answerGenerationService.generateAnswer(eq("What?"), any())).thenReturn(chatResponse);
 
     QueryResponse response = queryService.query("What?");
 
-    assertThat(response.answer()).isEqualTo("The answer is 42");
+    assertThat(response.answer()).contains("【source:");
     assertThat(response.sources()).hasSize(1);
     assertThat(response.sources().getFirst().fileName()).isEqualTo("readme.md");
     assertThat(response.sources().getFirst().relevanceScore()).isEqualTo(0.85);
-    assertThat(response.sources().getFirst().excerpt()).isEqualTo("Relevant content");
+    assertThat(response.sources().getFirst().cited()).isTrue();
+    assertThat(response.sources().getFirst().matchCount()).isEqualTo(1);
     assertThat(response.metadata().model()).isEqualTo("gpt-4o");
     assertThat(response.metadata().tokenCount()).isEqualTo(300);
-    assertThat(response.metadata().durationMs()).isGreaterThanOrEqualTo(0);
   }
 
   @Test
-  void queryTruncatesLongExcerpts() {
-    String longText = "A".repeat(300);
-    var chunk =
+  void queryMarksUncitedSourcesCorrectly() {
+    var citedChunk =
         Document.builder()
-            .text(longText)
-            .metadata(Map.of("file_name", "long.md"))
+            .text("Cited content")
+            .metadata(Map.of("file_name", "readme.md", "document_id", "doc-1"))
             .score(0.9)
             .build();
+    var uncitedChunk =
+        Document.builder()
+            .text("Uncited content")
+            .metadata(Map.of("file_name", "other.pdf", "document_id", "doc-2"))
+            .score(0.7)
+            .build();
 
-    when(vectorStore.similaritySearch(any(SearchRequest.class))).thenReturn(List.of(chunk));
+    when(vectorStore.similaritySearch(any(SearchRequest.class)))
+        .thenReturn(List.of(citedChunk, uncitedChunk));
 
-    var assistantMessage = new AssistantMessage("Answer");
-    var chatResponse = new ChatResponse(List.of(new Generation(assistantMessage)));
+    var answer = "Info from readme 【source: doc-1#0 | readme.md】.";
+    var chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage(answer))));
     when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
 
     QueryResponse response = queryService.query("Question");
 
-    assertThat(response.sources().getFirst().excerpt()).hasSize(203); // 200 + "..."
-    assertThat(response.sources().getFirst().excerpt()).endsWith("...");
+    assertThat(response.sources()).hasSize(2);
+    assertThat(response.sources().get(0).cited()).isTrue();
+    assertThat(response.sources().get(1).cited()).isFalse();
   }
 
   @Test
-  void queryDeduplicatesSourcesByFileName() {
+  void queryCountsMatchesPerFile() {
     var chunk1 =
         Document.builder()
-            .text("High relevance chunk")
-            .metadata(Map.of("file_name", "report.pdf"))
+            .text("First chunk")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-1"))
             .score(0.9)
             .build();
     var chunk2 =
         Document.builder()
-            .text("Lower relevance chunk")
-            .metadata(Map.of("file_name", "report.pdf"))
+            .text("Second chunk")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-1"))
             .score(0.7)
             .build();
     var chunk3 =
         Document.builder()
-            .text("Readme content")
-            .metadata(Map.of("file_name", "readme.md"))
+            .text("Readme chunk")
+            .metadata(Map.of("file_name", "readme.md", "document_id", "doc-2"))
             .score(0.8)
             .build();
 
@@ -130,27 +130,48 @@ class QueryServiceTest {
 
     assertThat(response.sources()).hasSize(2);
     assertThat(response.sources().get(0).fileName()).isEqualTo("report.pdf");
-    assertThat(response.sources().get(0).relevanceScore()).isEqualTo(0.9);
+    assertThat(response.sources().get(0).matchCount()).isEqualTo(2);
     assertThat(response.sources().get(1).fileName()).isEqualTo("readme.md");
+    assertThat(response.sources().get(1).matchCount()).isEqualTo(1);
   }
 
   @Test
-  void queryKeepsHighestScoreRegardlessOfOrder() {
-    var lowScoreFirst =
+  void queryRetainsCitationMarkersInAnswer() {
+    var chunk =
         Document.builder()
-            .text("Low score")
-            .metadata(Map.of("file_name", "data.csv"))
-            .score(0.6)
+            .text("Content")
+            .metadata(Map.of("file_name", "readme.md", "document_id", "doc-1"))
+            .score(0.9)
             .build();
-    var highScoreSecond =
+
+    when(vectorStore.similaritySearch(any(SearchRequest.class))).thenReturn(List.of(chunk));
+
+    var answer = "The answer 【source: doc-1#0 | readme.md】 is here.";
+    var chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage(answer))));
+    when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
+
+    QueryResponse response = queryService.query("Question");
+
+    assertThat(response.answer()).isEqualTo(answer);
+  }
+
+  @Test
+  void queryDeduplicatesSourcesByFileName() {
+    var chunk1 =
         Document.builder()
-            .text("High score")
-            .metadata(Map.of("file_name", "data.csv"))
-            .score(0.95)
+            .text("High relevance chunk")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-1"))
+            .score(0.9)
+            .build();
+    var chunk2 =
+        Document.builder()
+            .text("Lower relevance chunk")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-1"))
+            .score(0.7)
             .build();
 
     when(vectorStore.similaritySearch(any(SearchRequest.class)))
-        .thenReturn(List.of(lowScoreFirst, highScoreSecond));
+        .thenReturn(List.of(chunk1, chunk2));
 
     var chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage("Answer"))));
     when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
@@ -158,42 +179,15 @@ class QueryServiceTest {
     QueryResponse response = queryService.query("Question");
 
     assertThat(response.sources()).hasSize(1);
-    assertThat(response.sources().getFirst().relevanceScore()).isEqualTo(0.95);
-  }
-
-  @Test
-  void queryUsesExcerptFromHighestScoringChunk() {
-    var lowScore =
-        Document.builder()
-            .text("Wrong excerpt")
-            .metadata(Map.of("file_name", "notes.txt"))
-            .score(0.5)
-            .build();
-    var highScore =
-        Document.builder()
-            .text("Correct excerpt")
-            .metadata(Map.of("file_name", "notes.txt"))
-            .score(0.99)
-            .build();
-
-    when(vectorStore.similaritySearch(any(SearchRequest.class)))
-        .thenReturn(List.of(lowScore, highScore));
-
-    var chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage("Answer"))));
-    when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
-
-    QueryResponse response = queryService.query("Question");
-
-    assertThat(response.sources()).hasSize(1);
-    assertThat(response.sources().getFirst().excerpt()).isEqualTo("Correct excerpt");
+    assertThat(response.sources().getFirst().relevanceScore()).isEqualTo(0.9);
   }
 
   @Test
   void queryPassesSearchRequestWithCorrectParameters() {
     when(vectorStore.similaritySearch(any(SearchRequest.class))).thenReturn(List.of());
 
-    var assistantMessage = new AssistantMessage("No results");
-    var chatResponse = new ChatResponse(List.of(new Generation(assistantMessage)));
+    var chatResponse =
+        new ChatResponse(List.of(new Generation(new AssistantMessage("No results"))));
     when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
 
     queryService.query("Test query");
@@ -204,5 +198,53 @@ class QueryServiceTest {
     assertThat(request.getQuery()).isEqualTo("Test query");
     assertThat(request.getTopK()).isEqualTo(5);
     assertThat(request.getSimilarityThreshold()).isEqualTo(0.3);
+  }
+
+  @Test
+  void queryPreservesCitedFlagWhenDeduplicatingChunksFromSameFile() {
+    var citedChunk =
+        Document.builder()
+            .text("Cited chunk")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-1"))
+            .score(0.7)
+            .build();
+    var higherScoreUncitedChunk =
+        Document.builder()
+            .text("Higher score uncited")
+            .metadata(Map.of("file_name", "report.pdf", "document_id", "doc-2"))
+            .score(0.95)
+            .build();
+
+    when(vectorStore.similaritySearch(any(SearchRequest.class)))
+        .thenReturn(List.of(citedChunk, higherScoreUncitedChunk));
+
+    var answer = "Info 【source: doc-1#0 | report.pdf】.";
+    var chatResponse = new ChatResponse(List.of(new Generation(new AssistantMessage(answer))));
+    when(answerGenerationService.generateAnswer(any(), any())).thenReturn(chatResponse);
+
+    QueryResponse response = queryService.query("Question");
+
+    assertThat(response.sources()).hasSize(1);
+    assertThat(response.sources().getFirst().cited()).isTrue();
+    assertThat(response.sources().getFirst().relevanceScore()).isEqualTo(0.95);
+  }
+
+  private Usage createUsage(int promptTokens, int completionTokens) {
+    return new Usage() {
+      @Override
+      public Integer getPromptTokens() {
+        return promptTokens;
+      }
+
+      @Override
+      public Integer getCompletionTokens() {
+        return completionTokens;
+      }
+
+      @Override
+      public Object getNativeUsage() {
+        return null;
+      }
+    };
   }
 }
